补充伪类选择器知识点和笔记&新增背景知识

--- a/02-code/07-链接&状态伪类选择器.html
+++ b/02-code/07-链接&状态伪类选择器.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
+    /* 链接伪类 */
     /* 未被访问过的链接 a:link 把没有点击过的链接选出来 */
     a:link {
       color: red;
@@ -17,6 +18,8 @@
       color: antiquewhite;
     }
 
+
+    /* 状态伪类选择器 */
     /* a:hover 选择鼠标经过的那个链接 */
     a:hover {
       color: pink;
