学成在线案例新增hot图标&定位知识点

--- a/08-code/11-浮动注意点.html
+++ b/08-code/11-浮动注意点.html
@@ -21,7 +21,7 @@
       background-color: plum;
     }
 
-    /* 三毛不影响二毛 在二毛下边缘，二毛独占一行被一毛浮动覆盖 */
+    /* 三毛不影响二毛 尽量靠近二毛下边缘，二毛独占一行被一毛浮动覆盖 */
     .ermao {
       /* float: left; */
       width: 200px;
