--- a/08-code/12-为什么需要清除浮动.html
+++ b/08-code/12-为什么需要清除浮动.html
@@ -26,7 +26,7 @@
       background-color: pink;
     }
 
-    /* 大毛二毛浮动，父盒子标准流高度为0，所以footer会移到父盒子下方 */
+    /* 大毛二毛浮动，父盒子box标准流高度为0，所以footer会移到父盒子下方 */
     .footer {
       height: 200px;
       background-color: gray;
