笔记12圆角矩形补充知识点

--- a/08-code/02-圆角边框常用写法.html
+++ b/08-code/02-圆角边框常用写法.html
@@ -27,9 +27,10 @@
       width: 200px;
       height: 200px;
       /* border-radius: 10px 20px 30px 40px; */
+
       /* 两个值是对角线关系 */
-      /* border-radius: 10px 40px; */
-      border-top-left-radius: 20px;
+      border-radius: 10px 40px;
+      /* border-top-left-radius: 20px; */
       background-color: pink;
     }
   </style>
