学成在线案例-用户头像名字实现垂直居中对齐

--- a/08-demo/04-study/index.html
+++ b/08-demo/04-study/index.html
@@ -30,7 +30,7 @@
         </div>
         <!-- 用户模块 -->
         <div class="user">
-            <img src="../04-study/images/user.png" alt="">
+            <img src="../04-study/images/user.png" alt="" style="vertical-align: middle;">
             qq-lilei
         </div>
     </div>
